# ffmpegTest2

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/jqk/ffmpegtest2/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/jqk/ffmpegtest2/: MainActivity.kt
app/src/main/res/values/: strings.xml
app/src/test/java/com/jqk/ffmpegtest2/: ExampleUnitTest.kt
build-scripts/: build_fdkaac.sh  build_ffmpeg.sh  build_ffmpeg_with_x264_fdkaac.sh  build_x264.sh  config.sh
cmd/: build.gradle
cmd/src/androidTest/java/com/jqk/cmd/: ExampleInstrumentedTest.kt
cmd/src/main/: AndroidManifest.xml
cmd/src/main/cpp/: CMakeLists.txt  ffmpeg_cmd.c  ffmpeg_cmd.h  ffmpeg_thread.c
cmd/src/main/cpp/ffmpeg/: cmdutils.c  ffmpeg.c  ffmpeg.h
cmd/src/main/java/com/jqk/cmd/: CmdList.java  FFmpegCmd.java  FFmpegUtil.java  MainActivity.kt  OnVideoProcessListener.java
cmd/src/main/res/layout/: activity_main.xml
cmd/src/test/java/com/jqk/cmd/: ExampleUnitTest.kt
first/: build.gradle
first/src/androidTest/java/com/jqk/first/: ExampleInstrumentedTest.kt
first/src/main/: AndroidManifest.xml
first/src/main/cpp/: CMakeLists.txt  ffmpeg_helloworld.c  ffmpeg_helloworld.h
first/src/main/java/com/jqk/first/: FFmpegHelloWorld.java  MainActivity.kt
first/src/main/res/layout/: activity_main.xml
first/src/test/java/com/jqk/first/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
record/src/main/cpp/: base_include.cpp  base_include.h  jx_ffmpeg_cmd_run.c  jx_ffmpeg_cmd_run.h  jx_ffmpeg_config.h  jx_ffmpeg_jni.cpp  jx_jni_handler.cpp  jx_jni_handler.h  jx_log.cpp  jx_log.h  jx_media_muxer.cpp  jx_media_muxer.h  jx_pcm_encode_aac.cpp  jx_pcm_encode_aac.h  jx_user_arguments.cpp  jx_user_arguments.h  jx_yuv_encode_h264.cpp  jx_yuv_encode_h264.h  threadsafe_queue.cpp  threadsafe_queue.h
record/src/main/cpp/ffmpeg/: config.h  ffmpeg.c  ffmpeg.h
record/src/main/java/com/jqk/record/: CameraManager.java  FFmpegBridge.java  L.java
